--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "exceljs": "^4.3.0",
         "lodash-es": "^4.17.21",
         "mockjs": "^1.1.0",
+        "moment": "^2.30.1",
         "nprogress": "^0.2.0",
         "path-to-regexp": "^6.2.1",
         "pinia": "2.1.4",
