--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ VITE_USE_MOCK = false
 # public path
 VITE_PUBLIC_PATH = /
 
-VITE_PROXY = [["/dragon-api","http://localhost:8998/"]]
+VITE_PROXY = [["/dragon-api","http://123.56.103.129:80/"]]
 
 # Basic interface address SPA
 VITE_GLOB_API_URL=/dragon-api
