--- a/.env.production
+++ b/.env.production
@@ -9,9 +9,10 @@ VITE_PUBLIC_PATH = /
 # If you need multiple forms, you can use `,` to separate
 VITE_BUILD_COMPRESS = 'none'
 
+VITE_PROXY = [["/dragon-api","http://123.56.103.129:80/"]]
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=
+VITE_GLOB_API_URL=/dragon-api
 
 # File upload address， optional
 # It can be forwarded by nginx or write the actual address directly
