--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "driver.js": "^1.3.0",
         "echarts": "^5.4.2",
         "exceljs": "^4.3.0",
+        "live-server": "^1.2.2",
         "lodash-es": "^4.17.21",
         "mockjs": "^1.1.0",
         "moment": "^2.30.1",
