解决首页不刷新

--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,8 @@ VITE_USE_MOCK = false
 # public path
 VITE_PUBLIC_PATH = /
 
-VITE_PROXY = [["/dragon-api","http://123.56.103.129:80/"]]
+# VITE_PROXY = [["/dragon-api","http://123.56.103.129:80/"]]
+VITE_PROXY = [["/dragon-api","http://localhost:8988/"]]
 
 # Basic interface address SPA
 VITE_GLOB_API_URL=/dragon-api
