--- a/.env.production
+++ b/.env.production
@@ -9,7 +9,8 @@ VITE_PUBLIC_PATH = /
 # If you need multiple forms, you can use `,` to separate
 VITE_BUILD_COMPRESS = 'none'
 
-VITE_PROXY = [["/dragon-api","http://123.56.103.129:80/"]]
+VITE_PROXY = [["/dragon-api","http://localhost:8988/"]]
+# VITE_PROXY = [["/dragon-api","http://123.56.103.129:80/"]]
 
 # Basic interface address SPA
 VITE_GLOB_API_URL=/dragon-api
