--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "print-js": "^1.6.0",
         "qrcode": "^1.5.3",
         "qs": "^6.11.2",
+        "react-dnd-html5-backend": "^16.0.1",
         "resize-observer-polyfill": "^1.5.1",
         "showdown": "^2.1.0",
         "sortablejs": "^1.15.0",
@@ -102,6 +103,7 @@
         "vue-json-pretty": "^2.2.4",
         "vue-router": "^4.2.3",
         "vue-types": "^5.1.0",
+        "vue3-dnd": "^2.1.0",
         "vuedraggable": "^4.1.0",
         "vxe-table": "^4.4.5",
         "vxe-table-plugin-export-xlsx": "^3.0.4",
